fix: icon / wallet name gap

--- a/src/extension/auth/ManageWalletsButton.module.scss
+++ b/src/extension/auth/ManageWalletsButton.module.scss
@@ -2,7 +2,7 @@
 
 .manage__wallets {
   @include flex(flex-start);
-  gap: 12px;
+  gap: 8px;
   padding-inline: 10px;
   color: var(--token-dark-900);
 }
